--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+# Naming
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka
+spring.application.name=hote-mailing-service
